force-app/main/default/objects/Vendor_Registration__c/Vendor_Registration__c.object-meta.xml
<CustomObject>
    <label>Vendor Registration</label>
    <nameField>
        <label>Vendor Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>