force-app/main/default/objects/Vendor_Registration__c/fields/Last_Year_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Turnover__c</fullName>
    <label>Last Year Turnover</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>