force-app/main/default/objects/Vendor_Registration__c/fields/Vendor_Description__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Description__c</fullName>
    <label>Vendor Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>