force-app/main/default/objects/Vendor_Registration__c/fields/Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email__c</fullName>
    <label>Vendor Email</label>
    <length>30</length>
    <type>Text</type>
</CustomField>